test/visibility/relative-use/relative-use-error1.good
relative-use-error1.chpl:12: In function 'main':
relative-use-error1.chpl:14: error: Cannot find module or enum 'SubSubModule'
